ADD/ Fontawesome module & section intro home page

--- a/libs/presentational/src/styles/global.scss
+++ b/libs/presentational/src/styles/global.scss
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import "./animations.scss";
+@import '@fortawesome/fontawesome-svg-core/styles.css';
 
 // Responsive settings
 $desktop-breakpoint: 1024px;
