--- a/libs/presentational/src/styles/global.scss
+++ b/libs/presentational/src/styles/global.scss
@@ -4,6 +4,7 @@
 @import "./animations.scss";
 @import "./customClass.scss";
 @import '@fortawesome/fontawesome-svg-core/styles.css';
+@import './custom/button.scss';
 
 // Responsive settings
 $desktop-breakpoint: 1024px;
@@ -11,6 +12,8 @@ $tablet-breakpoint: 768px;
 $mobile-breakpoint: 480px;
 
 $container-width: 1400px;
+
+
 
 @font-face {
     font-family: 'LuckiestGuy';
