--- a/libs/presentational/src/styles/button.scss
+++ b/libs/presentational/src/styles/button.scss
@@ -5,7 +5,7 @@
 
 @layer components {
     .btn {
-        @apply rounded transition-colors shadow-sm w-full py-2 font-semibold text-xs;
+        @apply rounded transition-all shadow-sm w-full py-2 px-6 font-semibold text-xs;
     }
 
     .btn-disable {
@@ -25,7 +25,11 @@
     }
 
     .btn-black {
-        @apply bg-black text-white
+        @apply bg-black text-white hover:bg-stone
+    }
+
+    .btn-black-only-border {
+        @apply bg-black bg-opacity-0 border border-solid border-black rounded text-black hover:bg-opacity-100 hover:text-white
     }
 }
 
