FIX/Sticky Sidebar

--- a/apps/customer-web/app/global.scss
+++ b/apps/customer-web/app/global.scss
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import '@presentational/styles/global.scss';
+
+body {
+  overflow: visible !important;
+}
