--- a/libs/presentational/src/styles/customClass.scss
+++ b/libs/presentational/src/styles/customClass.scss
@@ -27,3 +27,15 @@
         animation-play-state: running;
     }
 }
+
+.hiddenByOpacity {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    &.active {
+        opacity: 100;
+        visibility: visible;
+        pointer-events: all;
+    }
+}
