FIX/Use module from lib

--- a/apps/customer-web/app/global.scss
+++ b/apps/customer-web/app/global.scss
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import '@presentational/styles/global.scss';
+@import '@presentational/styles/animations.scss';
+@import '@presentational/styles/customClass.scss';
+@import '@presentational/styles/button.scss';
+@import '@presentational/styles/shadow.scss';
